fix(blog): solve code blocks overflowing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -181,6 +181,7 @@ code {
 
 pre:has(> code) {
   margin-bottom: var(--space-md);
+  overflow-x: auto;
   padding: var(--space-md);
 }
 
